--- a/force-app/main/default/classes/CustomException.cls
+++ b/force-app/main/default/classes/CustomException.cls
@@ -1,1 +1,5 @@
+/* Name: CustomException
+Description : Exception class used to throw custom exceptions
+Author : Raja Karuppasamy
+*/
 public with sharing class CustomException extends Exception {}
